# R2D2-ROS2-Project

./: .gitignore  Dockerfile_gazebo  README.md
docs/architecture/: audio_voice.md  cortex_esp32.md  esp32_firmware.md  overview.md  power_management.md  r2sc-codec.md  soul_and_autonomy.md  startup_update.md  voice-language.md  voice-sample-system.md  voice_pipeline.md
docs/decisions/: 001-headless-no-desktop.md  002-bluetooth-head-esp32.md  003-cortex-esp32-power-controller.md  004-foxglove-over-x11.md  005-microros-prebuilt-library.md  006-r2d2-voice-language.md  007-r2sc-codec.md  008-sample-based-voice.md
docs/hardware/: bom.md  wiring.md
docs/setup/: autostart.md
esp32/r2d2_chassis_esp32/: .gitignore  platformio.ini
esp32/r2d2_chassis_esp32/scripts/: build_microros_lib.sh
esp32/r2d2_chassis_esp32/src/: config.h  hmc5883l.cpp  hmc5883l.h  main.cpp  md25.cpp  md25.h  oled_display.cpp  oled_display.h  srf02.cpp  srf02.h
esp32/r2d2_head_esp32/: platformio.ini
esp32/r2d2_head_esp32/scripts/: build_microros_lib.sh
esp32/r2d2_head_esp32/src/: config.h  main.cpp
install/: local_setup.sh  setup.sh
install/r2d2_audio/share/r2d2_audio/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d2_base/share/r2d2_base/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d2_behavior/share/r2d2_behavior/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d2_bringup/share/r2d2_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d2_bringup/share/r2d2_bringup/config/: foxglove_params.yaml  webcam_params.yaml
install/r2d2_bringup/share/r2d2_bringup/launch/: cameras.launch.py  (+2 more)
install/r2d2_description/share/r2d2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d2_head/share/r2d2_head/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d2_perception/share/r2d2_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/src/r2d2_audio/: package.xml  setup.cfg  setup.py
ros2_ws/src/r2d2_audio/config/: audio_params.yaml
ros2_ws/src/r2d2_audio/launch/: audio.launch.py
ros2_ws/src/r2d2_audio/r2d2_audio/: respeaker_node.py  wake_word_node.py
scripts/: r2d2-update.service  r2d2-update.sh
src/hw_drive_node/lib/: MD25.py
src/hw_drive_node/scripts/: hw_drive_node.py
src/r2d2_audio/: package.xml  setup.cfg  setup.py
src/r2d2_audio/launch/: audio.launch.py
src/r2d2_audio/r2d2_audio/: intent_mapper.py  r2sc_synth.py  respeaker_node.py  sample_library.py  utterance_builder.py  voice_node.py  wake_word_node.py  whisper_node.py
src/r2d2_audio/scripts/: synth.py
src/r2d2_base/: package.xml  setup.cfg  setup.py
src/r2d2_base/launch/: base.launch.py
src/r2d2_base/r2d2_base/: odom_tf_broadcaster.py
src/r2d2_behavior/: package.xml  setup.cfg  setup.py
src/r2d2_bringup/: microros-agent-chassis.service  microros-agent-head.service  microros-agent.service  package.xml  r2d2.service  setup.cfg  setup.py
src/r2d2_bringup/config/: foxglove_layout.json  foxglove_params.yaml  webcam_params.yaml
src/r2d2_bringup/launch/: cameras.launch.py  foxglove.launch.py  r2d2.launch.py
src/r2d2_description/: CMakeLists.txt  package.xml
src/r2d2_description/launch/: description.launch.py
src/r2d2_description/urdf/: r2d2.urdf.xacro
src/r2d2_head/: package.xml  setup.cfg  setup.py
src/r2d2_node/: CMakeLists.txt  package.xml
src/r2d2_node/scripts/: r2d2_main.py
src/r2d2_perception/: package.xml  setup.cfg  setup.py
src/r2d2_soul/: package.xml  setup.cfg  setup.py
src/r2d2_soul/launch/: soul.launch.py
src/r2d2_soul/r2d2_soul/: context_builder_node.py  llm_latency_test_node.py  llm_node.py  memory_node.py  mood_node.py
systemd/: r2d2.service
tools/: README.md  analyze_r2d2_sounds.py  setup_samples.sh  test_voice.py
(+6 files in other folders)
