<?xml version="1.0"?>
<package format="3">
  <name>r2d2_audio</name>
  <version>0.1.0</version>
  <description>R2D2 Audio: ReSpeaker DOA, Wake Word, Whisper STT, TTS</description>
  <maintainer email="r2d2@r2d2.local">r2d2</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
