<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d2_bringup</name>
  <version>0.1.0</version>
  <description>Top-level Bringup für R2D2: ASUS Xtion Pro, USB-Webcam und Foxglove Bridge.</description>
  <maintainer email="r2d2@r2d2.local">r2d2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
