<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d2_description</name>
  <version>0.1.0</version>
  <description>R2D2 URDF robot description (~75cm differential drive)</description>
  <maintainer email="daniel@example.com">Daniel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <ament_cmake>
    <build_type>ament_cmake</build_type>
  </ament_cmake>
</package>
