<?xml version="1.0"?>
<package format="3">
  <name>r2d2_node</name>
  <version>0.0.1</version>
  <description>The ROS2 node for R2D2</description>

  <maintainer email="dhopkins1000@googlemail.com">Daniel</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
